# bookshelf-demo

./: Makefile  README.md  docker-compose.yml
.github/: dependabot.yaml
.github/workflows/: check.yaml
auth-service/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
auth-service/dev/: requests.http
auth-service/src/: main.rs
auth-service/src/api/: error.rs  jwt.rs  mod.rs  provider.rs  routes.rs  server.rs
auth-service/src/iam/: error.rs  in_memory.rs  mod.rs
auth-service/src/models/: auth_request.rs  auth_response.rs  mod.rs  user.rs
bookshelf-service/: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
bookshelf-service/dev/: requests.http
bookshelf-service/internal/api/: routes.go  server.go
bookshelf-service/internal/database/: db.go  repository.go
bookshelf-service/internal/domain/: create_book.go  delete_book.go  error.go  get_book.go  get_books.go  update_book.go
bookshelf-service/internal/shared/: provider.go
bookshelf-service/test/api/: api_test.go  test_utils.go
bookshelf-service/test/domain/: create_book_test.go  delete_book_test.go  get_book_test.go  get_books_test.go  test_util.go  update_book_test.go
bookshelf_app/: .gitignore  Dockerfile  Makefile  README.md  nginx.conf  pubspec.yaml
bookshelf_app/android/app/: build.gradle
bookshelf_app/ios/Runner.xcodeproj/: project.pbxproj
bookshelf_app/lib/: main.dart
bookshelf_app/lib/data/: auth_service.dart  book_service.dart  client.dart  local_storage.dart
bookshelf_app/lib/domain/: login_use_case.dart  (+8 more)
bookshelf_app/web/: index.html  manifest.json
(+51 files in other folders)
