[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
async-std = "1.13.2"
bcrypt = "0.17.1"
chrono = "0.4.42"
env_logger = "0.11.6"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
log = "0.4.28"
serde = { version = "1.0.224", features = ["derive"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
