[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
async-std = "1.13.2"
bcrypt = "0.17.1"
chrono = "0.4.42"
env_logger = "0.11.6"
jsonwebtoken = "10.2.0"
lazy_static = "1.5.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
