[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.13.0"
async-std = "1.13.2"
bcrypt = "0.18.0"
chrono = "0.4.44"
env_logger = "0.11.6"
jsonwebtoken = "10.3.0"
lazy_static = "1.5.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
